# cicada-audio-annotation-tool

./: .gitignore  README.md  environment.yml  pyproject.toml
src/cicada/: __init__.py  __main__.py  app.py  audio.py  config.py  io_json.py  label_config.py  library.py  models.py  spectrogram.py
src/cicada/widgets/: box_item.py  controls.py  file_list.py  label_panel.py  spectrogram_view.py
tests/: test_io_json.py  test_models.py  test_spectrogram.py
tools/: make_sample.py
